Fehlerkorrektur in MotorCalc Tabellenausgabe + weitere kleine Fehler korrigiert

--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -209,7 +209,7 @@
     "\n",
     "Vernachlässigt man die Reibmomente in den Nennern und das quadratische Reibmoment unter der Wurzel erhält man:\n",
     "\n",
-    "$$\\eta_{\\rm{max}}\\approx 1-2\\sqrt{\\frac{M_{\\rm{R}}}{M_{\\rm{R}}}}+\\frac{M_{\\rm{R}}}{M_{\\rm{R}}} = \\left(1-\\sqrt{\\frac{M_{\\rm{R}}}{M_{\\rm{R}}}}\\right)^2$$\n",
+    "$$\\eta_{\\rm{max}}\\approx 1-2\\sqrt{\\frac{M_{\\rm{R}}}{M_{\\rm{H}}}}+\\frac{M_{\\rm{R}}}{M_{\\rm{H}}} = \\left(1-\\sqrt{\\frac{M_{\\rm{R}}}{M_{\\rm{H}}}}\\right)^2$$\n",
     "\n",
     "Ersetzt man in der exakten Lösung die Momente durch die Ströme über die Beziehungen\n",
     "\n",
@@ -263,7 +263,7 @@
     "\n",
     "Wirkungsgrad: $$\\eta = \\frac{P_{\\rm{mech}}}{P_{\\rm{el}}}$$\n",
     "\n",
-    "Leerlaufdrehzahl: $$n_0=k_{\\rm{n}}\\cdot U$$"
+    "Leerlaufdrehzahl: $$n_0=k_{\\rm{E}}\\cdot U$$"
    ]
   },
   {
@@ -278,6 +278,13 @@
     "\n",
     "Kraft (Newton): $$1 \\rm{N} = 1 \\frac{\\rm{kg}\\cdot\\rm{m}}{\\rm{s}^{2}}$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -296,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
