--- a/Projekte/166_A_BO2015NB2B03-113-12.0.ipynb
+++ b/Projekte/166_A_BO2015NB2B03-113-12.0.ipynb
@@ -53,7 +53,7 @@
     "n_WP = 300\n",
     "M_WP = 5E-3\n",
     "\n",
-    "m=CDCMotor(U_N=U_N, I_0=I_0, k_M=k_M, R=R, H=0.61, Theta=6.7, n_WP=n_WP, M_WP=M_WP, \\\n",
+    "m=CDCMotor(U_N=U_N, I_0=I_0, k_M=k_M, R=R, H=0.61, J=6.7, n_WP=n_WP, M_WP=M_WP, \\\n",
     "               motor_name='BO2015NB2B03-113-12.0', application='166_A / BOSCH LiDAR')\n",
     "m.calc_motor_values()\n",
     "m.print_parameter()\n",
