--- a/Projekte/166_A___BOSCH_LiDAR.ipynb
+++ b/Projekte/166_A___BOSCH_LiDAR.ipynb
@@ -1,28 +1,8 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   }
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3
- },
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 166_A / BOSCH LiDAR\n",
     "## Status 04-Oct-2019"
@@ -30,9 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Adaptation BO2015 to temperature and torque requirements\n",
     "### > 16mNm starting torque at -40°C and 6V\n",
@@ -47,7 +25,35 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "input parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t6.0\t\t2.77\t\t0.130\t\t6363\t\t0.008\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t6363\t\t5112\t\t3182\t\t0\t\t4519\ncurrent\t\tA\t0.130\t\t0.531\t\t1.149\t\t2.168\t\t0.721\ntorque\t\tNm\t0.001\t\t0.003\t\t0.009\t\t0.017\t\t0.005\npower\t\tW\t0.00\t\t1.82\t\t2.87\t\t0.00\t\t2.37\neff.\t\t%\t0.0\t\t57.0\t\t41.7\t\t0.0\t\t54.7\n\ninput parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t2.3\t\t2.77\t\t0.130\t\t2145\t\t0.008\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t2145\t\t1533\t\t1072\t\t0\t\t300\ncurrent\t\tA\t0.130\t\t0.326\t\t0.473\t\t0.817\t\t0.721\ntorque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\npower\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\neff.\t\t%\t0.0\t\t36.1\t\t30.5\t\t0.0\t\t9.6\n\nInput power: 1.63W\n"
+     "text": [
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t6.0\t\t2.77\t\t0.130\t\t6363\t\t0.008\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t6363\t\t5112\t\t3182\t\t0\t\t4519\n",
+      "current\t\tA\t0.130\t\t0.531\t\t1.149\t\t2.168\t\t0.721\n",
+      "torque\t\tNm\t0.001\t\t0.003\t\t0.009\t\t0.017\t\t0.005\n",
+      "power\t\tW\t0.00\t\t1.82\t\t2.87\t\t0.00\t\t2.37\n",
+      "eff.\t\t%\t0.0\t\t57.0\t\t41.7\t\t0.0\t\t54.7\n",
+      "\n",
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t2.3\t\t2.77\t\t0.130\t\t2145\t\t0.008\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t2145\t\t1533\t\t1072\t\t0\t\t300\n",
+      "current\t\tA\t0.130\t\t0.326\t\t0.473\t\t0.817\t\t0.721\n",
+      "torque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\n",
+      "power\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\n",
+      "eff.\t\t%\t0.0\t\t36.1\t\t30.5\t\t0.0\t\t9.6\n",
+      "\n",
+      "Input power: 1.63W\n"
+     ]
     }
    ],
    "source": [
@@ -74,9 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "### > 16mNm starting torque at -40°C and 10 V"
    ]
@@ -89,7 +93,35 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "input parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t10.0\t\t8.30\t\t0.078\t\t6092\t\t0.015\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t6092\t\t4856\t\t3046\t\t0\t\t4247\ncurrent\t\tA\t0.078\t\t0.306\t\t0.641\t\t1.204\t\t0.419\ntorque\t\tNm\t0.001\t\t0.003\t\t0.008\t\t0.017\t\t0.005\npower\t\tW\t0.00\t\t1.70\t\t2.63\t\t0.00\t\t2.22\neff.\t\t%\t0.0\t\t55.6\t\t41.1\t\t0.0\t\t53.1\n\ninput parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t3.9\t\t8.30\t\t0.078\t\t2145\t\t0.015\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t2145\t\t1526\t\t1072\t\t0\t\t300\ncurrent\t\tA\t0.078\t\t0.192\t\t0.276\t\t0.475\t\t0.419\ntorque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\npower\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\neff.\t\t%\t0.0\t\t35.4\t\t30.0\t\t0.0\t\t9.5\n\nInput power: 1.65W\n"
+     "text": [
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t10.0\t\t8.30\t\t0.078\t\t6092\t\t0.015\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t6092\t\t4856\t\t3046\t\t0\t\t4247\n",
+      "current\t\tA\t0.078\t\t0.306\t\t0.641\t\t1.204\t\t0.419\n",
+      "torque\t\tNm\t0.001\t\t0.003\t\t0.008\t\t0.017\t\t0.005\n",
+      "power\t\tW\t0.00\t\t1.70\t\t2.63\t\t0.00\t\t2.22\n",
+      "eff.\t\t%\t0.0\t\t55.6\t\t41.1\t\t0.0\t\t53.1\n",
+      "\n",
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t3.9\t\t8.30\t\t0.078\t\t2145\t\t0.015\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t2145\t\t1526\t\t1072\t\t0\t\t300\n",
+      "current\t\tA\t0.078\t\t0.192\t\t0.276\t\t0.475\t\t0.419\n",
+      "torque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\n",
+      "power\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\n",
+      "eff.\t\t%\t0.0\t\t35.4\t\t30.0\t\t0.0\t\t9.5\n",
+      "\n",
+      "Input power: 1.65W\n"
+     ]
     }
    ],
    "source": [
@@ -115,9 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "### > 16mNm starting torque at -40°C and 16 V"
    ]
@@ -130,7 +160,35 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "input parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t16.0\t\t19.38\t\t0.049\t\t6420\t\t0.022\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t6420\t\t5165\t\t3210\t\t0\t\t4575\ncurrent\t\tA\t0.049\t\t0.201\t\t0.437\t\t0.826\t\t0.272\ntorque\t\tNm\t0.001\t\t0.003\t\t0.009\t\t0.017\t\t0.005\npower\t\tW\t0.00\t\t1.84\t\t2.92\t\t0.00\t\t2.40\neff.\t\t%\t0.0\t\t57.3\t\t41.8\t\t0.0\t\t55.0\n\ninput parameter\nparameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\nunit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\nvalue\t\t6.0\t\t19.38\t\t0.049\t\t2145\t\t0.022\n\nmotor performance data:\nparameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\nspeed\t\tRPM\t2145\t\t1535\t\t1072\t\t0\t\t300\ncurrent\t\tA\t0.049\t\t0.123\t\t0.179\t\t0.308\t\t0.272\ntorque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\npower\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\neff.\t\t%\t0.0\t\t36.3\t\t30.6\t\t0.0\t\t9.7\n\nInput power: 1.63W\n"
+     "text": [
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t16.0\t\t19.38\t\t0.049\t\t6420\t\t0.022\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t6420\t\t5165\t\t3210\t\t0\t\t4575\n",
+      "current\t\tA\t0.049\t\t0.201\t\t0.437\t\t0.826\t\t0.272\n",
+      "torque\t\tNm\t0.001\t\t0.003\t\t0.009\t\t0.017\t\t0.005\n",
+      "power\t\tW\t0.00\t\t1.84\t\t2.92\t\t0.00\t\t2.40\n",
+      "eff.\t\t%\t0.0\t\t57.3\t\t41.8\t\t0.0\t\t55.0\n",
+      "\n",
+      "input parameter\n",
+      "parameter\tvoltage\t\tterm. resist.\tno-load cur.\tno-load speed\ttorque const.\n",
+      "unit\t\tVolt\t\tOhm\t\tAmpere\t\tRPM\t\tNm/A\n",
+      "value\t\t6.0\t\t19.38\t\t0.049\t\t2145\t\t0.022\n",
+      "\n",
+      "motor performance data:\n",
+      "parameter\tunit\tno-load\t\t@max eff.\t@max power\tstall\t@working point\n",
+      "speed\t\tRPM\t2145\t\t1535\t\t1072\t\t0\t\t300\n",
+      "current\t\tA\t0.049\t\t0.123\t\t0.179\t\t0.308\t\t0.272\n",
+      "torque\t\tNm\t0.001\t\t0.002\t\t0.003\t\t0.006\t\t0.005\n",
+      "power\t\tW\t0.00\t\t0.27\t\t0.33\t\t0.00\t\t0.16\n",
+      "eff.\t\t%\t0.0\t\t36.3\t\t30.6\t\t0.0\t\t9.7\n",
+      "\n",
+      "Input power: 1.63W\n"
+     ]
     }
    ],
    "source": [
@@ -161,5 +219,32 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
