Update Berechnung von Gleichstrommotoren.ipynb

--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "$$I_{\\rm{H}}=\\frac{U_{\\rm{N}}}{R}$$\n",
     "\n",
-    "Die Kennlinien werden über dem Drehmoment aufgetragen, das Werte zwischen $M_{\\rm{R}}$ und $M_{\\rm{H}}$ annehmen kann.\n",
+    "Die Kennlinien werden über dem Drehmoment aufgetragen, das Werte zwischen 0 und $M_{\\rm{H}}$ annehmen kann.\n",
     "\n",
     "Je nach Arbeitspunkt des Motors kann es auch sinnvoll sein, das Reibmoment aus den Herstellerangaben bei maximalem Wirkungsgrad zu berechnen:\n",
     "\n",
