--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -289,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -303,7 +303,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9704e1ec9b274b3ae3c3596122c12a0f8f3f150b906373e4cfd32b1de26a4749"
+   }
   }
  },
  "nbformat": 4,
