--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -141,6 +141,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -164,25 +165,25 @@
     "\n",
     "Der Wert von $\\eta(M)$ wird maximal wenn die Steigung des Verlaufs 0 wird, d.h. \n",
     "\n",
-    "$$\\frac{\\delta\\eta}{\\delta M}=0$$\n",
+    "$$\\frac{\\partial\\eta}{\\partial M}=0$$\n",
     "\n",
     "Diese partielle Ableitung lässt sich einfach über die Quotientenregel darstellen\n",
     "\n",
-    "$$\\frac{\\delta\\eta}{\\delta M}= \\frac{\n",
-    "    \\frac{\\delta P_{\\rm{mech}}}{\\delta M}\\cdot P_{\\rm{el}}-\\frac{\\delta P_{\\rm{el}}}{\\delta M}\\cdot P_{\\rm{mech}}\n",
+    "$$\\frac{\\partial\\eta}{\\partial M}= \\frac{\n",
+    "    \\frac{\\partial P_{\\rm{mech}}}{\\partial M}\\cdot P_{\\rm{el}}-\\frac{\\partial P_{\\rm{el}}}{\\partial M}\\cdot P_{\\rm{mech}}\n",
     "}{P_{\\rm{el}}^2}$$\n",
     "\n",
     "Der Ausdruck wird 0 wenn der Zähler 0 wird, d.h wenn\n",
     "\n",
-    "$$\\frac{\\delta P_{\\rm{mech}}}{\\delta M}\\cdot P_{\\rm{el}}=\\frac{\\delta P_{\\rm{el}}}{\\delta M}\\cdot P_{\\rm{mech}}$$\n",
+    "$$\\frac{\\partial P_{\\rm{mech}}}{\\partial M}\\cdot P_{\\rm{el}}=\\frac{\\partial P_{\\rm{el}}}{\\partial M}\\cdot P_{\\rm{mech}}$$\n",
     "\n",
     "Die einzelnen Ableitungen sind von einfacher Gestalt\n",
     "\n",
-    "$$\\frac{\\delta P_{\\rm{mech}}}{\\delta M}=2aM+aM_{\\rm{R}}+b$$\n",
+    "$$\\frac{\\partial P_{\\rm{mech}}}{\\partial M}=2aM+aM_{\\rm{R}}+b$$\n",
     "\n",
     "und \n",
     "\n",
-    "$$\\frac{\\delta P_{\\rm{el}}}{\\delta M}=b$$\n",
+    "$$\\frac{\\partial P_{\\rm{el}}}{\\partial M}=b$$\n",
     "\n",
     "Durch Einsetzen und Ausmultiplizieren erhält man am Ende eine quadratische Gleichung\n",
     "\n",
