Berechnung Kinematic SWINGgate + Projekte aufgeräumt

--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -22,11 +22,11 @@
     "|Leerlaufstrom|A|$I_0$|Strom ohne Last\n",
     "|Haltestrom (stall current)|A|$I_{\\rm{H}}$|Strom im Blockadefall\n",
     "|Drehmomentkonstante|Nm/A|$k_{\\rm{M}}$|Linearitätskonstante, Verhältnis aus Drehmoment und Motorstrom\n",
-    "|EMK-Konstante (Motorkonstante)|V/min$^{-1}$|$k_{\\rm{E}}$|Linearitätskonstante, Verhältnis aus gegeninduzierter Spannung und Drehzahl, auch Generatorkonstante genannt\n",
-    "|Drehzahlkonstante|min$^{-1}$/$\\,$V|$k_{\\rm{n}}$|Kehrwert von $k_{\\rm{E}}$\n",
-    "|Drehfrequenz|Hz|$f$|\n",
-    "|Drehzahl|min$^{-1}$|$n$|\n",
-    "|Leerlaufdrehzahl|min$^{-1}$|$n_0$|\n",
+    "|EMK-Konstante (Motorkonstante)|V / min $^{-1}$ |$k_{\\rm{E}}$|Linearitätskonstante, Verhältnis aus gegeninduzierter Spannung und Drehzahl, auch Generatorkonstante genannt\n",
+    "|Drehzahlkonstante|min $^{-1}$ / V| $k_{\\rm{n}}$|Kehrwert von $k_{\\rm{E}}$\n",
+    "|Drehfrequenz|Hz| $f$ |\n",
+    "|Drehzahl|min $^{-1}$ | $n$ |\n",
+    "|Leerlaufdrehzahl|min $^{-1}$ |$n_0$|\n",
     "|Winkelgeschwindigkeit|$\\frac{\\rm{rad}}{\\rm{s}}$|$\\omega$|\n",
     "|Ohmscher Widerstand|$\\Omega$|$R$|***Terminal Resistance***\n",
     "|Drehmoment|Nm|$M$|\n",
@@ -281,11 +281,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Kinetische Betrachtungen\n",
+    "\n",
+    "## Drehmoment\n",
+    "\n",
+    "$$\n",
+    "M = \\theta \\cdot \\frac{d\\omega}{dt}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\omega = 2\\pi f = 2\\pi n \\cdot 60 \\frac{\\rm{s}}{\\rm{min}} = n \\cdot \\frac{\\pi}{30} \\frac{\\rm{s}}{\\rm{min}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{d}{dt}\\omega = \\frac{\\pi}{30} \\frac{\\rm{s}}{\\rm{min}}\\frac{dn}{dt}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\omega}{dt}=\\frac{M}{\\theta}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "d\\omega = \\frac{M}{\\theta} dt\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\omega = \\frac{1}{\\theta} \\int_{t_a}^{t_e} M(t) dt\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "d\\alpha = \\omega\\cdot dt\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha = \\int_{t_a}^{t_e} \\omega dt\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
