Betrachtungen zu Unwuchtkräften ergänzt

--- a/Berechnung von Gleichstrommotoren.ipynb
+++ b/Berechnung von Gleichstrommotoren.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "# Kinetische Betrachtungen\n",
     "\n",
-    "## Drehmoment\n",
+    "## Beschleunigung eines Körpers mit einem gegebenen Massenträgheitsmoment\n",
     "\n",
     "$$\n",
     "M = \\theta \\cdot \\frac{d\\omega}{dt}\n",
@@ -320,6 +320,40 @@
     "$$\n",
     "\\alpha = \\int_{t_a}^{t_e} \\omega dt\n",
     "$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vibrationsmotoren\n",
+    "## Betrachtungen zu Radialkräften einer Unwucht\n",
+    "### Unwucht mit Halbzylinderform\n",
+    "\n",
+    "Die Radialkraft durch eine Unwucht mit eine Halbzylinderform ist gegeben durch\n",
+    "$$\n",
+    "F_{\\perp}=m\\cdot\\omega^2\\cdot r_{\\rm{cog}}\n",
+    "$$\n",
+    "In diesem Zusammenhang ist $m$ die Masse der Unwucht, $r_{\\rm{cog}}$ entspricht dem Abstand des Unwuchtsschwerpunktes von der Drehachse.\n",
+    "\n",
+    "Für einen Halbzylinder mit Radius $r$ und Höhe $h$ ist dieser Abstand gegeben durch\n",
+    "$$\n",
+    "r_{\\rm{cog}}=\\frac{4}{3}\\pi r\n",
+    "$$\n",
+    "\n",
+    "Die Masse der Unwucht lässt sich entsprechend über die Dichte $\\varrho$ und sein Volumen beschreiben\n",
+    "$$\n",
+    "m = \\frac{1}{4} \\pi r^2 h \\varrho\n",
+    "$$\n",
+    "\n",
+    "Beide Zusammenhänge lassen sich zu\n",
+    "$$\n",
+    "F_{\\perp} = \\frac{1}{3} \\pi^2 r^3 h \\varrho\n",
+    "$$\n",
+    "kombinieren.\n",
+    "\n",
+    "Die Höhe der Unwucht ist also direkt proportional zur Radialkraft, wohingegen der Radius in der dritten Potenz eingeht. Mit anderen Worten: um die Radialkraft zu halbieren, kann man die Höhe der Unwucht halbieren oder ihren Radius durch den Faktor $\\sqrt[3]{2} = 1.26$ dividieren."
    ]
   }
  ],
